manifests/gluetun/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vpn
  labels:
    name: vpn
---
apiVersion: v1
kind: Namespace
metadata:
  name: ombi
  labels:
    name: ombi
