manifests/gluetun/busybox-example.yaml
apiVersion: v1
kind: Pod
metadata:
  name: busybox-gluetun
  namespace: vpn
  labels:
    app: busybox-gluetun
  annotations:
    # Disable pod-gateway webhook injection
    setGateway: "false"
spec:
  containers:
  # Gluetun VPN sidecar container
  - name: gluetun
    image: qmcgaw/gluetun:latest
    securityContext:
      capabilities:
        add:
          - NET_ADMIN
    ports:
    - containerPort: 8000  # Gluetun control server
      name: gluetun-http
  
  # Your application container - shares network with gluetun
  - name: busybox
    image: busybox:latest
    command: ["sleep", "3600"]
    # All traffic from this container goes through the VPN
  
  restartPolicy: Always
